--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,4 +6,7 @@ find-links = http://download.zope.org/distribution/
 
 [test]
 recipe = zc.recipe.testrunner
+defaults = ['--tests-pattern', '^f?tests$', '--package', 'zope.testbrowser']
 eggs = zope.testbrowser
+       zope.app
+       ZODB3
