Use extras_require properly to run tests.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,7 +6,5 @@ find-links = http://download.zope.org/distribution/
 
 [test]
 recipe = zc.recipe.testrunner
-defaults = ['--tests-pattern', '^f?tests$', '--package', 'zope.testbrowser']
-eggs = zope.testbrowser
-       zope.app
-       ZODB3
+defaults = ['--tests-pattern', '^f?tests$']
+eggs = zope.testbrowser [test]
