very early code

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-develop = .
+develop = . /home/benji/workspace/mozrepl/1
 parts = test
 versions = versions
 find-links = http://download.zope.org/distribution/
