Fixed the setup to work correctly on a fresh Python.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-develop = . /home/benji/workspace/mozrepl/1
+develop = .
 parts = test
 versions = versions
 find-links = http://download.zope.org/distribution/
