experement with makeing a "zope" extra that includes all the stuff to interface to Zope 3's functional testing infrastructure

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,7 +7,7 @@ find-links = http://download.zope.org/distribution/
 [test]
 recipe = zc.recipe.testrunner
 defaults = ['--tests-pattern', '^f?tests$']
-eggs = zope.testbrowser [test]
+eggs = zope.testbrowser [zope]
 
 [versions]
 ClientForm = 0.2.7
