rework zope.testbrowser testing; will eventually allow the different flavors of testbrowser to all run the same tests; also helps with the required packages trimming

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,29 +1,34 @@
 [buildout]
 develop = .
-parts = test
+parts = test-zope test-no-zope
 versions = versions
 find-links = http://download.zope.org/distribution/
 
-[test]
+[test-zope]
 recipe = zc.recipe.testrunner
-defaults = ['--tests-pattern', '^f?tests$']
+defaults = ['--tests-pattern', '^zopetests$', '-1', '--auto-color']
 eggs = zope.testbrowser [zope]
+
+[test-no-zope]
+recipe = zc.recipe.testrunner
+defaults = ['-1', '--auto-color']
+eggs = zope.testbrowser
 
 [versions]
 ClientForm = 0.2.7
 RestrictedPython = 3.4.2
-ZConfig = 2.4a6
+ZConfig = 2.5
 ZODB3 = 3.9.0-dev-r77011
 docutils = 0.4
 mechanize = 0.1.7b
 pytz = 2007f
-setuptools = 0.6c6
+setuptools = 0.6c7
 zc.buildout = 1.0.0b30
 zc.recipe.egg = 1.0.0b6
 zc.recipe.testrunner = 1.0.0b8
 zdaemon = 2.0.0
 zodbcode = 3.4.0b1dev-r75670
-zope.annotation = 3.4.0b1.dev-r75758
+zope.annotation = 3.4.0
 zope.app.applicationcontrol = 3.4-dev-r73715
 zope.app.appsetup = 3.4.0a1
 zope.app.authentication = 3.4.0b1
@@ -54,14 +59,14 @@ zope.app.security = 3.4.0a1-1
 zope.app.securitypolicy = 3.4.0a1
 zope.app.session = 3.5.0dev-r77333
 zope.app.testing = 3.4.0b1-r78707
-zope.app.wsgi = 3.4.0b1dev-r75415
+zope.app.wsgi = 3.4.0
 zope.app.zapi = 3.4.0a1
 zope.app.zcmlfiles = 3.4.0a1
 zope.app.zopeappgenerations = 3.4.0a1
-zope.cachedescriptors = 3.4.0b1-r75830
+zope.cachedescriptors = 3.4.0
 zope.component = 3.4.0a1
 zope.configuration = 3.4.0b1
-zope.contenttype = 3.4.0a1
+zope.contenttype = 3.4.0
 zope.copypastemove = 3.4.0a1
 zope.datetime = 3.4.0
 zope.deferredimport = 3.4.0
@@ -76,9 +81,9 @@ zope.hookable = 3.4.0
 zope.i18n = 3.4.0b5.dev-r78840
 zope.i18nmessageid = 3.4.0
 zope.interface = 3.4.0
-zope.lifecycleevent = 3.4.0a1
+zope.lifecycleevent = 3.4.0
 zope.location = 3.4.0b2
-zope.minmax = 1.0b1
+zope.minmax = 1.0b2
 zope.modulealias = 3.4.0a1
 zope.pagetemplate = 3.4.0a1
 zope.proxy = 3.4.0
@@ -86,7 +91,7 @@ zope.publisher = 3.5.0a1.dev-r78838
 zope.schema = 3.4.0b1dev-r77624
 zope.security = 3.4.0b5
 zope.size = 3.4.0
-zope.structuredtext = 3.4.0a1
+zope.structuredtext = 3.4.0
 zope.tal = 3.4.0b1
 zope.tales = 3.4.0a1
 zope.testing = 3.5.1
