--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,94 +1,9 @@
 [buildout]
 develop = .
 parts = test
-versions = versions
-find-links = http://download.zope.org/distribution/
+index = http://download.zope.org/zope3.4
 
 [test]
 recipe = zc.recipe.testrunner
 defaults = ['--tests-pattern', '^f?tests$']
 eggs = zope.testbrowser [test]
-
-[versions]
-ClientForm = 0.2.7
-RestrictedPython = 3.4.2
-ZConfig = 2.4a6
-ZODB3 = 3.9.0-dev-r77011
-docutils = 0.4
-mechanize = 0.1.7b
-pytz = 2007f
-setuptools = 0.6c6
-zc.buildout = 1.0.0b30
-zc.recipe.egg = 1.0.0b6
-zc.recipe.testrunner = 1.0.0b8
-zdaemon = 2.0.0
-zodbcode = 3.4.0b1dev-r75670
-zope.annotation = 3.4.0b1.dev-r75758
-zope.app.applicationcontrol = 3.4-dev-r73715
-zope.app.appsetup = 3.4.0a1
-zope.app.authentication = 3.4.0b1
-zope.app.basicskin = 3.4.0a1
-zope.app.broken = 3.4.0a1
-zope.app.component = 3.4.0b3
-zope.app.container = 3.5.0a1
-zope.app.content = 3.4.0a1
-zope.app.debug = 3.4.0a1
-zope.app.dependable = 3.4.0a1
-zope.app.error = 3.4.0a1
-zope.app.exception = 3.4.0a1
-zope.app.folder = 3.4.0a1
-zope.app.form = 3.4.0b2.dev-r77626
-zope.app.generations = 3.4.0a1
-zope.app.http = 3.4.0a1
-zope.app.i18n = 3.4.0a1
-zope.app.interface = 3.4.0a1
-zope.app.locales = 3.4.0b1.dev-r77033
-zope.app.pagetemplate = 3.4.0b1dev-r75616
-zope.app.principalannotation = 3.4.0a1
-zope.app.publication = 3.4.0a1-2
-zope.app.publisher = 3.5.0a2
-zope.app.renderer = 3.4.0a1
-zope.app.rotterdam = 3.4.0a1
-zope.app.schema = 3.4.0a1
-zope.app.security = 3.4.0a1-1
-zope.app.securitypolicy = 3.4.0a1
-zope.app.session = 3.5.0dev-r77333
-zope.app.testing = 3.4.0b1-r78707
-zope.app.wsgi = 3.4.0b1dev-r75415
-zope.app.zapi = 3.4.0a1
-zope.app.zcmlfiles = 3.4.0a1
-zope.app.zopeappgenerations = 3.4.0a1
-zope.cachedescriptors = 3.4.0b1-r75830
-zope.component = 3.4.0a1
-zope.configuration = 3.4.0b1
-zope.contenttype = 3.4.0a1
-zope.copypastemove = 3.4.0a1
-zope.datetime = 3.4.0
-zope.deferredimport = 3.4.0
-zope.deprecation = 3.4.0
-zope.dottedname = 3.4.0
-zope.dublincore = 3.4.0a1
-zope.event = 3.4.0
-zope.exceptions = 3.4.0b2
-zope.filerepresentation = 3.4.0a1
-zope.formlib = 3.4.0a1
-zope.hookable = 3.4.0
-zope.i18n = 3.4.0b5.dev-r78840
-zope.i18nmessageid = 3.4.0
-zope.interface = 3.4.0
-zope.lifecycleevent = 3.4.0a1
-zope.location = 3.4.0b2
-zope.minmax = 1.0b1
-zope.modulealias = 3.4.0a1
-zope.pagetemplate = 3.4.0a1
-zope.proxy = 3.4.0
-zope.publisher = 3.5.0a1.dev-r78838
-zope.schema = 3.4.0b1dev-r77624
-zope.security = 3.4.0b5
-zope.size = 3.4.0
-zope.structuredtext = 3.4.0a1
-zope.tal = 3.4.0b1
-zope.tales = 3.4.0a1
-zope.testing = 3.5.1
-zope.thread = 3.4
-zope.traversing = 3.5.0a1.dev-r78730
