Fix bug introduced in 3.4.1 that created incompatible tracebacks in doctests. This neccesitated adding a patched mechanize to the source tree; patches have been sent to the mechanize project.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,9 +1,101 @@
 [buildout]
-develop = .
-parts = test
+develop = . mechanize
+parts = test interpreter
 index = http://download.zope.org/zope3.4
+versions = versions
 
 [test]
 recipe = zc.recipe.testrunner
 defaults = ['--tests-pattern', '^f?tests$']
 eggs = zope.testbrowser [test]
+
+[interpreter]
+recipe = zc.recipe.egg
+eggs = zope.testbrowser
+interpreter = py
+
+[versions]
+ClientForm = 0.2.7
+RestrictedPython = 3.4.2
+ZConfig = 2.5
+ZODB3 = 3.9.0-dev-r77011
+docutils = 0.4
+pytz = 2007g
+setuptools = 0.6c7
+zc.buildout = 1.0.0b31
+zc.recipe.egg = 1.0.0b6
+zc.recipe.testrunner = 1.0.0b8
+zdaemon = 2.0.1
+zodbcode = 3.4.0
+zope.annotation = 3.4.0
+zope.app.applicationcontrol = 3.4.1
+zope.app.appsetup = 3.4.1
+zope.app.authentication = 3.4.1
+zope.app.basicskin = 3.4.0
+zope.app.broken = 3.4.0
+zope.app.component = 3.4.1
+zope.app.container = 3.5.2
+zope.app.content = 3.4.0
+zope.app.debug = 3.4.0
+zope.app.dependable = 3.4.0
+zope.app.error = 3.5.1
+zope.app.exception = 3.4.1
+zope.app.folder = 3.4.0
+zope.app.form = 3.4.1
+zope.app.generations = 3.4.1
+zope.app.http = 3.4.1
+zope.app.i18n = 3.4.4
+zope.app.interface = 3.4.0
+zope.app.locales = 3.4.0
+zope.app.pagetemplate = 3.4.0
+zope.app.principalannotation = 3.4.0
+zope.app.publication = 3.4.3
+zope.app.publisher = 3.5.0a2
+zope.app.renderer = 3.4.0
+zope.app.rotterdam = 3.4.1
+zope.app.schema = 3.4.0
+zope.app.security = 3.4.0
+zope.app.securitypolicy = 3.4.5
+zope.app.session = 3.5.1
+zope.app.testing = 3.4.1
+zope.app.wsgi = 3.4.0
+zope.app.zapi = 3.4.0
+zope.app.zcmlfiles = 3.4.3
+zope.app.zopeappgenerations = 3.4.0
+zope.cachedescriptors = 3.4.0
+zope.component = 3.4.0
+zope.configuration = 3.4.0
+zope.contenttype = 3.4.0
+zope.copypastemove = 3.4.0
+zope.datetime = 3.4.0
+zope.deferredimport = 3.4.0
+zope.deprecation = 3.4.0
+zope.dottedname = 3.4.2
+zope.dublincore = 3.4.0
+zope.error = 3.5.1
+zope.event = 3.4.0
+zope.exceptions = 3.4.0
+zope.filerepresentation = 3.4.0
+zope.formlib = 3.4.0
+zope.hookable = 3.4.0
+zope.i18n = 3.4.0
+zope.i18nmessageid = 3.4.3
+zope.interface = 3.4.1
+zope.lifecycleevent = 3.4.0
+zope.location = 3.4.0
+zope.minmax = 1.1.0
+zope.modulealias = 3.4.0
+zope.pagetemplate = 3.4.0
+zope.proxy = 3.4.0
+zope.publisher = 3.5.0a1.dev-r78838
+zope.schema = 3.4.0
+zope.security = 3.4.0
+zope.securitypolicy = 3.4.0
+zope.session = 3.4.1
+zope.size = 3.4.0
+zope.structuredtext = 3.4.0
+zope.tal = 3.4.0
+zope.tales = 3.4.0
+zope.testing = 3.5.1
+zope.thread = 3.4
+zope.traversing = 3.5.0a1.dev-r78730
