add missing eggs to interpreter and tests

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,11 +8,13 @@ versions = versions
 recipe = zc.recipe.testrunner
 defaults = ['--tests-pattern', '^f?tests$']
 eggs = zope.testbrowser [test]
+    mechanize
 
 [interpreter]
 recipe = zc.recipe.egg
 eggs = zope.testbrowser
 interpreter = py
+    mechanize
 
 [versions]
 ClientForm = 0.2.7
