Added a zope.testbrowser.testing.Browser.post method that allows tests to supply a body and a content type.  This is handy for testing ajax with non-form input (e.g. json).

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,14 @@
 [buildout]
 develop = . mechanize
 parts = test interpreter
-index = http://download.zope.org/zope3.4
+index = http://download.zope.org/simple
+extends = http://download.zope.org/zope3.4/versions-3.4.0c1.cfg
+versions = versions
+
+[versions]
+zope.publisher = 3.5.1
+zope.testbrowser =
+mechanize =
 
 [test]
 recipe = zc.recipe.testrunner
