--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,8 +1,11 @@
 [buildout]
 develop = .
 parts = test interpreter
-versions = versions
+index = http://download.zope.org/simple
 extends = http://download.zope.org/zope3.4/versions.cfg
+versions = versions
+allow-picked-versions = false                                                                                                                                                                                                           
+use-dependency-links = false
 
 [versions]
 zope.testbrowser =
@@ -13,10 +16,9 @@ zope.app.publication = 3.4.2
 recipe = zc.recipe.testrunner
 defaults = ['--tests-pattern', '^f?tests$']
 eggs = zope.testbrowser [test]
-    mechanize
 
 [interpreter]
 recipe = zc.recipe.egg
 eggs = zope.testbrowser
+       mechanize
 interpreter = py
-    mechanize
