--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,7 +2,7 @@
 develop = .
 parts = test interpreter
 index = http://pypi.python.org/simple
-extends = http://download.zope.org/zope3.4/versions.cfg
+extends = http://download.zope.org/zope3.4/3.4.0/versions.cfg
 versions = versions
 allow-picked-versions = false
 use-dependency-links = false
@@ -13,6 +13,7 @@ zope.publisher = 3.5.4
 ClientForm = 0.2.10
 mechanize = 0.1.10
 setuptools = 0.6c9
+zope.site = 3.5.1
 
 [test]
 recipe = zc.recipe.testrunner
