Update buildout.cfg to test against the closest to all-trunk that is still working

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,19 +1,14 @@
 [buildout]
 develop = .
 parts = test interpreter
-index = http://pypi.python.org/simple
-extends = http://download.zope.org/zope3.4/3.4.0/versions.cfg
 versions = versions
-allow-picked-versions = false
-use-dependency-links = false
 
 [versions]
 zope.testbrowser =
-zope.publisher = 3.5.4
-ClientForm = 0.2.10
-mechanize = 0.1.10
-setuptools = 0.6c9
-zope.site = 3.5.1
+zope.container = 3.8.1
+zope.publisher = 3.8.0
+zope.app.publication = 3.6.0
+zope.app.publisher = 3.7.0
 
 [test]
 recipe = zc.recipe.testrunner
