Make sure this branch stays compatible with Zope 2.12

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,18 +1,11 @@
 [buildout]
 develop = .
 parts = test interpreter
-index = http://pypi.python.org/simple
-extends = http://download.zope.org/zope3.4/versions.cfg
+extends = http://download.zope.org/Zope2/index/2.12.0b4/versions.cfg
 versions = versions
-allow-picked-versions = false
-use-dependency-links = false
 
 [versions]
 zope.testbrowser =
-zope.publisher = 3.5.4
-ClientForm = 0.2.10
-mechanize = 0.1.10
-setuptools = 0.6c9
 
 [test]
 recipe = zc.recipe.testrunner
