Make the tests pass on the 3.4 branch of zope.testbrowser by pinning dependency versions to the Zope 3.4 KGS.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,6 +2,15 @@
 develop = .
 parts = test
 index = http://download.zope.org/zope3.4
+extends = http://download.zope.org/zope3.4/3.4.0/versions.cfg
+versions = versions
+
+[versions]
+# we always want the latest of these
+zc.buildout =
+setuptools =
+zope.testing =
+mechanize =
 
 [test]
 recipe = zc.recipe.testrunner
