Oops, I accidentally made bin/test get the tests from the KGS release instead of the local source tree.
buildout is full of caveats :(

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,6 +7,7 @@ versions = versions
 
 [versions]
 # we always want the latest of these
+zope.testbrowser =
 zc.buildout =
 setuptools =
 zope.testing =
