--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,18 @@
 [buildout]
 develop = .
+    ../zope.app.appsetup
+    ../ZODB
 parts = test test_bbb interpreter
+versions=versions
+
+[versions]
+zope.traversing = >=4.0.0a1
+zope.session = >= 4.0.0a1
+zope.publisher = >=4.0.0a1
+zope.i18n = >=4.0.0a3
+zope.site = >=4.0.0a1
+zope.security = >= 4.0.0a4
+zope.container = >= 4.0.0a2
 
 [test]
 recipe = zc.recipe.testrunner
