Add coverage to see how well the package is covered.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,6 @@
 [buildout]
 develop = .
-parts = test test_bbb interpreter
+parts = test test_bbb coverage-test coverage-report interpreter
 
 [test]
 recipe = zc.recipe.testrunner
@@ -11,6 +11,19 @@ eggs = zope.testbrowser [test]
 recipe = zc.recipe.testrunner
 defaults = ['--tests-pattern', '^f?tests$']
 eggs = zope.testbrowser [test,test_bbb]
+
+[coverage-test]
+recipe = zc.recipe.testrunner
+eggs = zope.testbrowser [test]
+defaults = ['--coverage', '${buildout:directory}/coverage']
+
+[coverage-report]
+recipe = zc.recipe.egg
+eggs =
+    z3c.coverage
+scripts = coveragereport
+arguments = ('${buildout:directory}/coverage',
+             '${buildout:directory}/coverage/report')
 
 [interpreter]
 recipe = zc.recipe.egg
