--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 # Configuration script to Travis-CI
-+language: python
-+python:
-+    - 2.7
-+install:
-+    - python bootstrap.py
-+    - bin/buildout
-+script:
-+    - bin/test -v1
-+notifications:
-+    email: false
+language: python
+python:
+    - 2.7
+install:
+    - python bootstrap.py
+    - bin/buildout
+script:
+    - bin/test -v1
+notifications:
+    email: false
