All tests pass under Python-3

--- a/tox.ini
+++ b/tox.ini
@@ -4,3 +4,12 @@ envlist = py26, py27
 [testenv]
 commands =
     python setup.py test -q
+
+deps =
+    zope.interface
+    zope.schema
+    pytz
+    WebTest >= 2.0.2
+    WSGIProxy2
+    six
+
