--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py26, py27
+envlist = py26, py27, py33
 
 [testenv]
 commands =
@@ -12,4 +12,3 @@ deps =
     WebTest >= 2.0.2
     WSGIProxy2
     six
-
