More button tests

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,7 @@
 [buildout]
 develop = .
     ../zope.app.appsetup
-    ../ZODB
+    ../webtest
 parts = test test_bbb coverage-test coverage-report interpreter
 versions=versions
 
