Add a tox.ini, make travis use it
Using a trick from https://github.com/Pylons/substanced/pull/128/files
to reduce duplication

Should fix tox build failures.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 include *.py
 include *.rst
 include .travis.yml
+include tox.ini
 include buildout.cfg
 recursive-include src *.gif
 recursive-include src *.html
