--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: python
 python:
+    - 2.6
     - 2.7
 install:
-    - python bootstrap.py
-    - bin/buildout
+    - pip install tox
 script:
-    - bin/test -v1
+    - tox -e py${TRAVIS_PYTHON_VERSION//[.]/}
 notifications:
     email: false
