--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,9 @@
 [tox]
 envlist =
-    py26, py27, py33
+    py26,py27,py33,py34
 
 [testenv]
 deps =
     zope.testing
-
 commands =
-    python setup.py test -q
+    python setup.py -q test -q
