--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,19 @@
 [tox]
 envlist =
-    py26,py27,py33,py34
+    py26,py27,py33,py34,docs
 
 [testenv]
 deps =
     zope.testing
 commands =
     python setup.py -q test -q
+
+[testenv:docs]
+basepython =
+    python2.7
+commands = 
+    sphinx-build -b html -d docs/_build/doctrees docs docs/_build/html
+    sphinx-build -b doctest -d docs/_build/doctrees docs docs/_build/doctest
+deps =
+    Sphinx
+    repoze.sphinx.autointerface
