--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py26,py27,py33,py34,docs
+    py26,py27,py33,py34,docs,flake8
 
 [testenv]
 deps =
@@ -11,9 +11,15 @@ commands =
 [testenv:docs]
 basepython =
     python2.7
-commands = 
+commands =
     sphinx-build -b html -d docs/_build/doctrees docs docs/_build/html
     sphinx-build -b doctest -d docs/_build/doctrees docs docs/_build/doctest
 deps =
     Sphinx
     repoze.sphinx.autointerface
+
+[testenv:flake8]
+basepython = python2
+deps = {[testenv]deps}
+       flake8
+commands = flake8 src setup.py
