Also check doctests, thus packages used in doctests are recognized as well.

--- a/tox.ini
+++ b/tox.ini
@@ -22,4 +22,4 @@ deps =
 basepython = python2
 deps = {[testenv]deps}
        flake8
-commands = flake8 src setup.py
+commands = flake8 src setup.py --doctests
