--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py27,py33,py34,py35,docs
+    py27,py33,py34,py35,docs,flake8
 
 [testenv]
 deps =
@@ -17,3 +17,9 @@ commands =
 deps =
     Sphinx
     repoze.sphinx.autointerface
+
+[testenv:flake8]
+basepython = python2
+deps = {[testenv]deps}
+       flake8
+commands = flake8 src setup.py --doctests
