--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,14 @@
 [tox]
 envlist =
-    py27,py33,py34,py35,docs,flake8
+    py27,
+    py33,
+    py34,
+    py35,
+    py36,
+    pypy,
+    pypy3,
+    docs,
+    flake8
 
 [testenv]
 deps =
