--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,17 @@ python:
     - 3.3
     - 3.4
     - 3.5
+    - 3.6
+    - pypy-5.4.1
+    - pypy3.3-5.2-alpha1
+matrix:
+    include:
+        - python: "2.7"
+          env: TOXENV=flake8,docs
 install:
-    - pip install tox
+    - pip install tox tox-travis
 script:
-    - tox -e py${TRAVIS_PYTHON_VERSION//[.]/}
+    - tox
 # Alternative: use buildout instead of tox
 #install:
 #    - python bootstrap.py
