Fix test runs for Python 3.5+ with current setuptools.
Otherwise there is an exception while installing the package.

--- a/tox.ini
+++ b/tox.ini
@@ -13,9 +13,9 @@ envlist =
 [testenv]
 deps =
     .[test]
+    zope.testrunner
 commands =
-    python setup.py -q test -q
-usedevelop = true
+    zope-testrunner --test-path=src {posargs:-vc}
 
 [testenv:docs]
 basepython =
