--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,9 +1,19 @@
 include *.py
 include *.rst
+include *.txt
+
 include .travis.yml
 include tox.ini
 include bootstrap.py
 include buildout.cfg
+
+exclude MANITEST.in
+
+recursive-include docs *.bat
+recursive-include docs *.py
+recursive-include docs *.rst
+recursive-include docs Makefile
+
 recursive-include src *.gif
 recursive-include src *.html
 recursive-include src *.txt
