--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ python:
     - 2.7
     - 3.5
     - 3.6
-    - pypy-5.4.1
-    - pypy3.3-5.2-alpha1
+    - pypy
+    - pypy3
 matrix:
     include:
         - python: "2.7"
