[WIP] Add ``mechRepr`` to input fields having the type ``email``.
This requires a merge and release in WebTest.

--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ envlist =
 
 [testenv]
 deps =
+    git+https://github.com/gocept/webtest.git@f65c263#egg=WebTest
     .[test]
     zope.testrunner
 commands =
