--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ envlist =
 
 [testenv]
 deps =
-    git+https://github.com/gocept/webtest.git@f65c263#egg=WebTest
+    git+https://github.com/Pylons/webtest.git#egg=WebTest
     .[test]
     zope.testrunner
 commands =
@@ -23,6 +23,7 @@ commands =
     sphinx-build -b html -d docs/_build/doctrees docs docs/_build/html
     sphinx-build -b doctest -d docs/_build/doctrees docs docs/_build/doctest
 deps =
+    git+https://github.com/Pylons/webtest.git#egg=WebTest
     Sphinx
     repoze.sphinx.autointerface
     zope.app.wsgi
