--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
     - pip install zope.testrunner
     - pip install -U -e .[test]
 script:
-    - coverage run zope.testrunner --test-path=src -v
+    - coverage run -m zope.testrunner --test-path=src -v
 after_success:
     - coveralls
 notifications:
