Bring back flake8 and docs to TravisCI.

--- a/tox.ini
+++ b/tox.ini
@@ -13,8 +13,9 @@ envlist =
 deps =
     .[test]
     zope.testrunner
+    coverage
 commands =
-    zope-testrunner --test-path=src {posargs:-vc}
+    coverage run -m zope.testrunner --test-path=src {posargs:-vc}
 
 [testenv:docs]
 basepython =
