--- a/.travis.yml
+++ b/.travis.yml
@@ -8,15 +8,15 @@ python:
     - pypy3
 matrix:
     include:
+        - python: "3.6"
+          env: TOXENV=flake8,docs
         - python: "3.7"
           dist: xenial
           sudo: true
 install:
-    - pip install coveralls coverage
-    - pip install zope.testrunner
-    - pip install -U -e .[test]
+    - pip install tox tox-travis coveralls
 script:
-    - coverage run -m zope.testrunner --test-path=src -v
+    - tox
 after_success:
     - coveralls
 notifications:
