--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-# Configuration script to Travis-CI
 language: python
 python:
     - 2.7
@@ -8,16 +7,21 @@ python:
     - pypy3
 matrix:
     include:
-        - python: "3.6"
-          env: TOXENV=flake8,docs
         - python: "3.7"
           dist: xenial
           sudo: true
 install:
-    - pip install tox tox-travis coveralls
+    - pip install coverage coveralls
+    - pip install zope.testrunner flake8
+    - pip install Sphinx repoze.sphinx.autointerface zope.app.wsgi
+    - pip install -U -e .[test]
 script:
-    - tox
+    - coverage run -m zope.testrunner --test-path=src -v
+    - flake8 src setup.py --doctests
+    - sphinx-build -b html -d docs/_build/doctrees docs docs/_build/html
+    - sphinx-build -b doctest -d docs/_build/doctrees docs docs/_build/doctest
 after_success:
     - coveralls
 notifications:
     email: false
+cache: pip
