--- a/.coveragerc
+++ b/.coveragerc
@@ -4,3 +4,9 @@ source = zope.testbrowser
 
 [report]
 precision = 2
+
+[paths]
+source =
+    src/
+    .tox/*/lib/python*/site-packages/
+    .tox/pypy*/site-packages/
