--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,27 @@ deps =
     coverage
 commands =
     coverage run -m zope.testrunner --test-path=src {posargs:-vc}
+setenv =
+    COVERAGE_FILE=.coverage.{envname}
+
+[testenv:coverage-report]
+basepython = python3.6
+deps = coverage
+skip_install = true
+commands =
+    coverage erase
+    coverage combine
+    coverage report -m
+setenv =
+    COVERAGE_FILE=.coverage
+parallel_show_output = true
+depends =
+    py27,
+    py35,
+    py36,
+    py37,
+    pypy,
+    pypy3,
 
 [testenv:docs]
 basepython =
