Ensure all objects have consistent resolution orders.

--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,7 @@ commands =
     coverage run -m zope.testrunner --test-path=src {posargs:-vc}
 setenv =
     COVERAGE_FILE=.coverage.{envname}
+    ZOPE_INTERFACE_STRICT_IRO=1
 
 [testenv:coverage-report]
 basepython = python3.6
