Make warning about typo in filename go away.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,7 +8,7 @@ include bootstrap.py
 include buildout.cfg
 include tox.ini
 
-exclude MANITEST.in
+exclude MANIFEST.in
 
 recursive-include docs *.bat
 recursive-include docs *.py
