Configuring for pure-python

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,31 @@
-*.pyc
-*.so
+# Generated from:
+# https://github.com/zopefoundation/meta/tree/master/config/pure-python
 *.dll
-.Python
-__pycache__
-include/
-lib/
-src/*.egg-info
-
+*.egg-info/
+*.profraw
+*.pyc
+*.pyo
+*.so
 .coverage
-.installed.cfg
-.tox
-bin
-build
-coverage
-develop-eggs
-parts
-dist
-docs/_build
-tags
 .coverage.*
+.eggs/
+.installed.cfg
+.mr.developer.cfg
+.tox/
+.vscode/
+__pycache__/
+bin/
+build/
+coverage.xml
+develop-eggs/
+develop/
+dist/
+docs/_build
+eggs/
+etc/
+lib/
+lib64
+log/
+parts/
+pyvenv.cfg
+var/
