--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,6 +28,8 @@ jobs:
         - ["3.8",   "py38"]
         - ["3.9",   "py39"]
         - ["3.10",  "py310"]
+        - ["pypy2", "pypy"]
+        - ["pypy3", "pypy3"]
         - ["3.9",   "docs"]
         - ["3.9",   "coverage"]
 
