--- a/.meta.toml
+++ b/.meta.toml
@@ -10,7 +10,7 @@ with-pypy = true
 with-future-python = false
 with-legacy-python = true
 with-docs = true
-with-sphinx-doctests = false
+with-sphinx-doctests = true
 
 [tox]
 use-flake8 = true
