--- a/tox.ini
+++ b/tox.ini
@@ -21,8 +21,10 @@ usedevelop = true
 deps =
 commands =
     zope-testrunner --test-path=src {posargs:-vc}
+    !py27-!pypy: sphinx-build -b doctest -d {envdir}/.cache/doctrees docs {envdir}/.cache/doctest
 extras =
     test
+    docs
 
 [testenv:lint]
 basepython = python3
@@ -40,11 +42,10 @@ commands =
 [testenv:docs]
 basepython = python3
 skip_install = false
-extras =
-    docs
 commands_pre =
 commands =
     sphinx-build -b html -d docs/_build/doctrees docs docs/_build/html
+    sphinx-build -b doctest -d docs/_build/doctrees docs docs/_build/doctest
 
 [testenv:coverage]
 basepython = python3
@@ -56,6 +57,7 @@ deps =
 commands =
     mkdir -p {toxinidir}/parts/htmlcov
     coverage run -m zope.testrunner --test-path=src {posargs:-vc}
+    coverage run -a -m sphinx -b doctest -d {envdir}/.cache/doctrees docs {envdir}/.cache/doctest
     coverage html
     coverage report -m --fail-under=70
 
