--- a/.meta.toml
+++ b/.meta.toml
@@ -2,7 +2,7 @@
 # https://github.com/zopefoundation/meta/tree/master/config/pure-python
 [meta]
 template = "pure-python"
-commit-id = "44387d573d487297f87ac4ddcbeb907d973b138a"
+commit-id = "ff15d9cadba92153c20c5dc421f7e2eacca4920c"
 
 [python]
 with-windows = false
@@ -14,6 +14,9 @@ with-sphinx-doctests = true
 
 [tox]
 use-flake8 = true
+testenv-setenv = [
+    "ZOPE_INTERFACE_STRICT_IRO=1",
+    ]
 
 [coverage]
 fail-under = 70
