--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,8 @@ envlist =
 [testenv]
 usedevelop = true
 deps =
+setenv =
+    ZOPE_INTERFACE_STRICT_IRO=1
 commands =
     zope-testrunner --test-path=src {posargs:-vc}
     !py27-!pypy: sphinx-build -b doctest -d {envdir}/.cache/doctrees docs {envdir}/.cache/doctest
