--- a/tox.ini
+++ b/tox.ini
@@ -4,15 +4,11 @@
 minversion = 3.18
 envlist =
     lint
-    py27
-    py35
-    py36
     py37
     py38
     py39
     py310
     py311
-    pypy
     pypy3
     docs
     coverage
@@ -24,7 +20,7 @@ setenv =
     ZOPE_INTERFACE_STRICT_IRO=1
 commands =
     zope-testrunner --test-path=src {posargs:-vc}
-    !py27-!pypy: sphinx-build -b doctest -d {envdir}/.cache/doctrees docs {envdir}/.cache/doctest
+    sphinx-build -b doctest -d {envdir}/.cache/doctrees docs {envdir}/.cache/doctest
 extras =
     test
     docs
