Remove no longer needed normalizers + test on Windows.
There are normalizers for windows, so make sure the work.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,6 +18,7 @@ jobs:
       matrix:
         os:
         - ["ubuntu", "ubuntu-20.04"]
+        - ["windows", "windows-latest"]
         config:
         # [Python version, tox env]
         - ["3.9",   "lint"]
@@ -26,13 +27,18 @@ jobs:
         - ["3.9",   "py39"]
         - ["3.10",  "py310"]
         - ["3.11",  "py311"]
+        - ["3.12",  "py312"]
         - ["pypy-3.9", "pypy3"]
         - ["3.9",   "docs"]
         - ["3.9",   "coverage"]
+        exclude:
+          - { os: ["windows", "windows-latest"], config: ["3.9",   "lint"] }
+          - { os: ["windows", "windows-latest"], config: ["3.9",   "docs"] }
+          - { os: ["windows", "windows-latest"], config: ["3.9",   "coverage"] }
 
     runs-on: ${{ matrix.os[1] }}
     if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
-    name: ${{ matrix.config[1] }}
+    name: ${{ matrix.os[0] }}-${{ matrix.config[1] }}
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python
