- drop support for Python 3.7, add support for Python 3.12 and 3.13

--- a/.meta.toml
+++ b/.meta.toml
@@ -2,12 +2,12 @@
 # https://github.com/zopefoundation/meta/tree/master/config/pure-python
 [meta]
 template = "pure-python"
-commit-id = "13b9049c"
+commit-id = "74cdfdf6"
 
 [python]
 with-windows = true
 with-pypy = true
-with-future-python = false
+with-future-python = true
 with-docs = true
 with-sphinx-doctests = true
 with-macos = false
