--- a/tox.ini
+++ b/tox.ini
@@ -5,12 +5,12 @@ minversion = 3.18
 envlist =
     release-check
     lint
-    py37
     py38
     py39
     py310
     py311
     py312
+    py313
     pypy3
     docs
     coverage
@@ -19,7 +19,10 @@ envlist =
 usedevelop = true
 package = wheel
 wheel_build_env = .pkg
+pip_pre = py313: true
 deps =
+    setuptools < 69
+    Sphinx
 setenv =
     ZOPE_INTERFACE_STRICT_IRO=1
     py312: VIRTUALENV_PIP=23.1.2
@@ -40,9 +43,10 @@ deps =
     check-manifest
     check-python-versions >= 0.20.0
     wheel
+commands_pre =
 commands =
     check-manifest
-    check-python-versions
+    check-python-versions --only setup.py,tox.ini,.github/workflows/tests.yml
     python -m build --sdist --no-isolation
     twine check dist/*
 
@@ -79,12 +83,13 @@ allowlist_externals =
     mkdir
 deps =
     coverage
+    Sphinx
 commands =
     mkdir -p {toxinidir}/parts/htmlcov
     coverage run -m zope.testrunner --test-path=src {posargs:-vc}
     coverage run -a -m sphinx -b doctest -d {envdir}/.cache/doctrees docs {envdir}/.cache/doctest
     coverage html --ignore-errors
-    coverage report --ignore-errors --show-missing --fail-under=70
+    coverage report --show-missing --fail-under=70
 
 [coverage:run]
 branch = True
@@ -92,6 +97,7 @@ source = zope.testbrowser
 
 [coverage:report]
 precision = 2
+ignore_errors = True
 exclude_lines =
     pragma: no cover
     pragma: nocover
